# bf_interpreter_jit_compiler

./: .gitignore  CMakeLists.txt  Makefile  README.md  assemble.sh  bf.c  bf.h  compile.c  compiler.c  debug.h  file_io.c  file_io.h  hello_world.bf  interpret.c  interpreter.c  jit.c  main.c  nick.bf  stack.c  stack.h  vector.c  vector.h
samples/: echo.bf  hello_world.bf  nick.bf
tests/: test_stack.c  test_vector.c
